Fix title card box to fix on mobiles

--- a/japan-edp-map/css/world.css
+++ b/japan-edp-map/css/world.css
@@ -8,8 +8,8 @@ body {
   top: 2rem;
   border-radius: 3px;
   font-family: "Source Sans Pro", sans-serif;
-  max-width: 380px;
-  min-width: 350px;
+  max-width: 310px;
+  min-width: 310px;
   z-index: 2;
   background-color: #fff;
   padding: 0.5rem 1.5rem;
